Application-Code/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: three-tier-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels: 
        app: backend
    spec:
      containers:
      - name: backend
        image: likhith045/backend:5
        imagePullPolicy: Always
        ports:
        - containerPort: 3500
        livenessProbe:
          httpGet: 
            path: /healthz
            port: 3500
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 3500
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
        startupProbe:
          httpGet:
            path: /started
            port: 3500
          initialDelaySeconds: 0
          periodSeconds: 10
          failureThreshold: 30
