Application-Code/k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongodb-deployment
  namespace: three-tier-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-deployment
  template:
    metadata:
      labels:
        app: mongodb-deployment
    spec:
      containers:
      - name: mon
        image: mongo:4.4.6
        # command:
        #     - "mongod"
        #     - "--interleave=all"
        #     - "mongod"
        #     - "--wiredTigerCacheSizeGB"
        #     - "0.1"
        #     - "--bind_ip"
        #     - "0.0.0.0"
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: mongo-volume
            mountPath: /data/db
      volumes:
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: mongodb-volume-claim
