Application-Code/k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: three-tier-app
  name: mongodb-svc
spec:
  selector:
    app: mongodb-deployment
  ports:
  - name: mongodb-svc
    protocol: TCP
    port: 27017
    targetPort: 27017
