Application-Code/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-deployment
  namespace: three-tier-app
spec:
  ports:
  - port: 3500
    protocol: TCP
  type: ClusterIP
  selector:
    app: backend
